Fixed header alignment and changed fonts

--- a/src/assets/css/_theme.sass
+++ b/src/assets/css/_theme.sass
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap')
+
 $base-dark: #2E82A8
 $base-color: #6DB4D5
 $base-light: #89C5E0
@@ -6,7 +9,8 @@ $accent-dark: #FF8F53
 $accent-color: #FFB96D
 $accent-light: #FFE389
 
-$neutral-dark: #23383A
-$neutral-light: #D7EAEC
+$neutral-dark: navyblue
+$neutral-light: white
 
-$body-font: 1em 'Dosis', Helvetica, sans-serif
+$body-font: 'PT Sans', Helvetica, sans-serif
+$heading-font: 'Dosis', Helvetica, sans-serif
