--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap')
 @import "theme"
 
 body
@@ -6,7 +5,8 @@ body
     background-color: $base-color
 
 #app
-    font: $body-font
+    font-family: $body-font
+    font-weight: bold
     color: $neutral-dark
 
 a
@@ -19,11 +19,17 @@ a
         transition: 0.2s
         color: $accent-light
 
-h1, h2, h3
+h1, h2, h3,
+h4, h5, h6
+    font-family: $heading-font
     margin: 0
     color: $accent-light
-    text-transform: uppercase
+    letter-spacing: 0.15em
     text-align: center
+    text-transform: uppercase
+
+h1
+    font-size: 2.5em
 
 .page-container
     width: 100%
@@ -34,3 +40,13 @@ h1, h2, h3
 
 .page-content
     padding: 1em
+
+.flex
+    display: flex
+
+.flex-col
+    flex-direction: column
+
+.align-center
+    align-items: center
+    justify-content: center
